--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ private/
 showcase-project/node_modules/
 showcase-project/.env
 showcase-project/dist/
+showcase-project/EMAIL_SETUP.md
 
 # Development environments
 .replit
