--- a/showcase-project/vercel.json
+++ b/showcase-project/vercel.json
@@ -13,7 +13,7 @@
       "dest": "/api/$1"
     },
     {
-      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|md))",
       "headers": {
         "Cache-Control": "public, max-age=31536000, immutable"
       }
@@ -22,5 +22,8 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
+  ],
+  "includeFiles": [
+    "content/**"
   ]
 }
