Fix: Resolve asset misalignment - add missing featured endpoint, fix build process, ensure manifest generation in Vercel

--- a/showcase-project/vercel.json
+++ b/showcase-project/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "vite build",
+  "buildCommand": "npx vite build && node scripts/build-asset-manifest.js",
   "outputDirectory": "client/dist",
   "functions": {
     "api/**/*.ts": {
