Fix image 404 errors by removing asset hashing
ISSUE RESOLVED: Images were 404ing because of hash misalignment
- Request: 1_1752220578130.png
- Built:   1_1752220578130-D4YC4SMD.png

SOLUTION: Disabled Vite asset hashing for images
- Modified vite.config.ts to use [name].[ext] for images
- Kept hashing for CSS/JS assets for cache busting
- Regenerated asset manifest with perfect alignment

RESULT: All images now load correctly
- Request: /assets/1_1752220578130.png
- Built:   /assets/1_1752220578130.png
- Manifest: /assets/1_1752220578130.png

Also fixed TypeScript errors in API endpoints

--- a/showcase-project/api-asset-manifest.json
+++ b/showcase-project/api-asset-manifest.json
@@ -1,37 +1,37 @@
 {
-  "/1_1752220578130.png": "/assets/1_1752220578130-D4YC4SMD.png",
-  "1_1752220578130.png": "/assets/1_1752220578130-D4YC4SMD.png",
-  "20210501_010051-01.jpeg": "/assets/20210501_010051-01-DxAyKo5O.jpeg",
-  "20210602_103142.jpg": "/assets/20210602_103142-Dr__M1hA.jpg",
-  "20210602_103157-C-WOvuns.jpg": "/assets/20210602_103157-C-WOvuns.jpg",
-  "20210627_093847.jpg": "/assets/20210627_093847-DqMCY_fi.jpg",
-  "20220225_001145.jpg": "/assets/20220225_001145-Bp_uH8Do.jpg",
-  "20240201_005129-Ca-i0Pd3.jpg": "/assets/20240201_005129-Ca-i0Pd3.jpg",
-  "20240726_010100.jpg": "/assets/20240726_010100-D0ja4Jpa.jpg",
-  "art-1_1.jpg": "/assets/art-1_1-C6Nuj4Vb.jpg",
-  "/coinview.png": "/assets/coinview-Dtwflba6.png",
-  "coinview.png": "/assets/coinview-Dtwflba6.png",
-  "/data_projects.png": "/assets/data_projects-3Niz8B7g.png",
-  "data_projects.png": "/assets/data_projects-3Niz8B7g.png",
-  "/design.png": "/assets/design-DbYrb1cR.png",
-  "design.png": "/assets/design-DbYrb1cR.png",
-  "/favicon.png": "/assets/favicon-CDiNRGNZ.png",
-  "favicon.png": "/assets/favicon-CDiNRGNZ.png",
-  "/logo-backup.png": "/assets/logo-backup-Duo8FemG.png",
-  "logo-backup.png": "/assets/logo-backup-Duo8FemG.png",
-  "/logo-light.png": "/assets/logo-light-CrM8PIfE.png",
-  "logo-light.png": "/assets/logo-light-CrM8PIfE.png",
-  "/logo-main2.png": "/assets/logo-main2-C084ZFuX.png",
-  "logo-main2.png": "/assets/logo-main2-C084ZFuX.png",
-  "profile_1752217997980.jpg": "/assets/profile_1752217997980-DwY9tbZo.jpg",
-  "Screenshot_20250309_002557_Instagram.jpg": "/assets/Screenshot_20250309_002557_Instagram-e48yS__A.jpg",
-  "WhatsApp Image 2025-08-31 at 17.13.13_d45e3c24.jpg": "/assets/WhatsApp Image 2025-08-31 at 17.13.13_d45e3c24-RKQtoIoP.jpg",
-  "WhatsApp Image 2025-08-31 at 17.13.14_28815b28.jpg": "/assets/WhatsApp Image 2025-08-31 at 17.13.14_28815b28-zRxIW8ai.jpg",
-  "WhatsApp Image 2025-08-31 at 17.13.14_89f2dc41.jpg": "/assets/WhatsApp Image 2025-08-31 at 17.13.14_89f2dc41-DezELK3N.jpg",
-  "WhatsApp Image 2025-08-31 at 17.13.15_a710e06d.jpg": "/assets/WhatsApp Image 2025-08-31 at 17.13.15_a710e06d-7zO0UZR3.jpg",
-  "WhatsApp Image 2025-08-31 at 17.13.16_c10c326f-Cwv1_sQ-.jpg": "/assets/WhatsApp Image 2025-08-31 at 17.13.16_c10c326f-Cwv1_sQ-.jpg",
-  "WhatsApp Image 2025-08-31 at 17.13.16_f37b3a27.jpg": "/assets/WhatsApp Image 2025-08-31 at 17.13.16_f37b3a27-A8WCJtpI.jpg",
-  "WhatsApp Image 2025-08-31 at 17.13.18_31dfc7c6.jpg": "/assets/WhatsApp Image 2025-08-31 at 17.13.18_31dfc7c6-CtvAIAdA.jpg",
-  "/zeitgeist.png": "/assets/zeitgeist-BrgHmZd6.png",
-  "zeitgeist.png": "/assets/zeitgeist-BrgHmZd6.png"
+  "/1_1752220578130.png": "/assets/1_1752220578130.png",
+  "1_1752220578130.png": "/assets/1_1752220578130.png",
+  "20210501_010051-01.jpeg": "/assets/20210501_010051-01.jpeg",
+  "20210602_103142.jpg": "/assets/20210602_103142.jpg",
+  "20210602_103157.jpg": "/assets/20210602_103157.jpg",
+  "20210627_093847.jpg": "/assets/20210627_093847.jpg",
+  "20220225_001145.jpg": "/assets/20220225_001145.jpg",
+  "20240201_005129.jpg": "/assets/20240201_005129.jpg",
+  "20240726_010100.jpg": "/assets/20240726_010100.jpg",
+  "art-1_1.jpg": "/assets/art-1_1.jpg",
+  "/coinview.png": "/assets/coinview.png",
+  "coinview.png": "/assets/coinview.png",
+  "/data_projects.png": "/assets/data_projects.png",
+  "data_projects.png": "/assets/data_projects.png",
+  "/design.png": "/assets/design.png",
+  "design.png": "/assets/design.png",
+  "/favicon.png": "/assets/favicon.png",
+  "favicon.png": "/assets/favicon.png",
+  "/logo-backup.png": "/assets/logo-backup.png",
+  "logo-backup.png": "/assets/logo-backup.png",
+  "/logo-light.png": "/assets/logo-light.png",
+  "logo-light.png": "/assets/logo-light.png",
+  "/logo-main2.png": "/assets/logo-main2.png",
+  "logo-main2.png": "/assets/logo-main2.png",
+  "profile_1752217997980.jpg": "/assets/profile_1752217997980.jpg",
+  "Screenshot_20250309_002557_Instagram.jpg": "/assets/Screenshot_20250309_002557_Instagram.jpg",
+  "WhatsApp Image 2025-08-31 at 17.13.13_d45e3c24.jpg": "/assets/WhatsApp Image 2025-08-31 at 17.13.13_d45e3c24.jpg",
+  "WhatsApp Image 2025-08-31 at 17.13.14_28815b28.jpg": "/assets/WhatsApp Image 2025-08-31 at 17.13.14_28815b28.jpg",
+  "WhatsApp Image 2025-08-31 at 17.13.14_89f2dc41.jpg": "/assets/WhatsApp Image 2025-08-31 at 17.13.14_89f2dc41.jpg",
+  "WhatsApp Image 2025-08-31 at 17.13.15_a710e06d.jpg": "/assets/WhatsApp Image 2025-08-31 at 17.13.15_a710e06d.jpg",
+  "WhatsApp Image 2025-08-31 at 17.13.16_c10c326f.jpg": "/assets/WhatsApp Image 2025-08-31 at 17.13.16_c10c326f.jpg",
+  "WhatsApp Image 2025-08-31 at 17.13.16_f37b3a27.jpg": "/assets/WhatsApp Image 2025-08-31 at 17.13.16_f37b3a27.jpg",
+  "WhatsApp Image 2025-08-31 at 17.13.18_31dfc7c6.jpg": "/assets/WhatsApp Image 2025-08-31 at 17.13.18_31dfc7c6.jpg",
+  "/zeitgeist.png": "/assets/zeitgeist.png",
+  "zeitgeist.png": "/assets/zeitgeist.png"
 }
