URGENT FIX: Vercel image routing causing 404s
PROBLEM: Images 404ing despite being built correctly
- Request: /data_projects.png  404
- Request: /creatives/image.jpg  404
- Actual location: /assets/

ROOT CAUSE: vercel.json routing not directing to /assets/

SOLUTION: Added comprehensive routing rules:
1. /creatives/*  /assets/*  (creative images)
2. /assets/*  /assets/*     (direct asset requests)
3. /*.ext  /assets/*        (fallback for any image)

This should FINALLY fix all image 404 errors!

--- a/showcase-project/vercel.json
+++ b/showcase-project/vercel.json
@@ -13,8 +13,22 @@
       "dest": "/api/$1"
     },
     {
+      "src": "/creatives/(.*\\.(png|jpg|jpeg|gif|svg|ico|webp|avif))",
+      "dest": "/assets/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/assets/(.*\\.(png|jpg|jpeg|gif|svg|ico|webp|avif))",
+      "dest": "/assets/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
       "src": "/(.*\\.(png|jpg|jpeg|gif|svg|ico|webp|avif))",
-      "dest": "/$1",
+      "dest": "/assets/$1",
       "headers": {
         "Cache-Control": "public, max-age=31536000, immutable"
       }
