--- a/showcase-project/vercel.json
+++ b/showcase-project/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npx vite build && node scripts/build-asset-manifest.js && node scripts/copy-project-images.js",
+  "buildCommand": "npx vite build && node scripts/build-asset-manifest.js",
   "outputDirectory": "client/dist",
   "functions": {
     "api/**/*.ts": {
@@ -29,13 +29,6 @@
     {
       "src": "/blog-images/(.*)",
       "dest": "/blog-images/$1",
-      "headers": {
-        "Cache-Control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "src": "/project-images/(.*)",
-      "dest": "/project-images/$1",
       "headers": {
         "Cache-Control": "public, max-age=31536000, immutable"
       }
